--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -47,7 +47,7 @@
 }
 
 #section {
-    width: 78%;
+    width: 75%;
     float: right;
     padding: 10px;
     background: white;
@@ -90,14 +90,17 @@ ul {
         padding-bottom: 10px;
     }
 
+        .menu li a:hover {
+            text-decoration: underline;
+        }
+
 a, a:visited, a.hover, a:active {
     text-decoration: none;
     color: inherit;
+    cursor: pointer;
 }
 
-.menu li {
-    padding-bottom: 10px;
-}
+
 
 #middle {
     width: 100%;
@@ -111,93 +114,160 @@ a, a:visited, a.hover, a:active {
     IE6-9 *;
 }
 
-.menu li a:hover {
-    text-decoration: underline;
-}
+
 /***********************************Daily Status Style********************************/
-#dailystatuscontainer label {
-    display: inline-block;
-    width: 92px;
-    padding-right: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 25px;
-}
-
-#dailystatuscontainer .daily_status_label1 {
-    display: inline-grid;
-    width: 200px;
-    padding-top: 30px;
-}
-
 #dailystatuscontainer {
     margin-left: 20px;
     margin-top: 20px;
     background-color: #EFF4F9;
     padding-bottom: 25px;
     padding-top: 25px;
-    padding-left: 25px;
+    padding-left: 30px;
     border: groove;
     padding-right: 25px;
-    margin-right: 24px;
-    margin-left: -5px;
+    margin-right: 9px;
+    margin-left: 10px;
 }
 
-#daily_status_list {
-    margin-top: 20px;
-    margin-left: -8px;
-    margin-bottom: 17px;
-    margin-right: 27px;
-}
+    #dailystatuscontainer label {
+        display: inline-block;
+        width: 92px;
+        padding-right: 92px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 25px;
+    }
 
-#vacation_list {
-    margin-top: 20px;
-    margin-bottom: 17px;
-}
 
-#dailystatuscontainer .buttondiv {
-    width: 100%;
-    text-align: center;
-    padding-top: 20px;
-}
 
-#dailystatuscontainer .savebutton {
-    background-color: #0066A6;
-    border: none;
-    color: white;
-    padding: 6px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    border-radius: 8px;
-}
+    #dailystatuscontainer .buttondiv {
+        width: 100%;
+        text-align: center;
+        padding-top: 20px;
+    }
 
-#dailystatuscontainer .daily_status_dropdown {
-    width: 165px;
+    #dailystatuscontainer .savebutton {
+        background-color: #0066A6;
+        border: none;
+        color: white;
+        padding: 6px 15px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 14px;
+        border-radius: 8px;
+        outline: none;
+    }
+
+    #dailystatuscontainer textarea {
+        margin-right: 28px;
+        margin-left: 25px;
+    }
+
+    #dailystatuscontainer .daily_status_label1 {
+        display: inline-grid;
+        width: 200px;
+        padding-top: 30px;
+    }
+
+.daily_status_dropdown {
+    width: 157px;
     margin-right: 28px;
     margin-left: 25px;
 }
 
-#dailystatuscontainer #hour {
-    width: 50px;
-    margin-right: 10px;
+#hour {
+    width: 48px;
+    margin-right: 8px;
 }
 
-#dailystatuscontainer #min {
-    width: 50px;
-    margin-left: 6px;
-    margin-right: 10px;
+#min {
+    width: 48px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
-#dailystatuscontainer textarea {
-    margin-right: 28px;
-    margin-left: 25px;
+.daily_status_list {
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-bottom: 17px;
+    margin-right: 12px;
+    padding-right: 2px;
 }
+
 
 .daily_status_heading {
-    margin-left: -7px;
+    padding-top: 17px;
+    margin-left: 9px;
 }
+
+.error_msg {
+    width: 165px;
+    margin-left: 172px;
+    padding-left: 281px;
+    color: red;
+}
+
+#activeDes {
+    margin-left: 25px;
+    padding-left: 1px;
+}
+
+#dailystatusview ul {
+    float: left;
+    border-radius: 5px;
+    background-color: rgb(248,248,248);
+    margin-bottom: 12px;
+}
+
+#dailystatusview li {
+    float: left;
+    background-color: rgb(200,200,200);
+    padding: 5px 19px;
+    margin: 5px 2px 5px 0px;
+    color: black;
+    list-style: none;
+}
+
+    #dailystatusview li:hover, #dailystatusview li:hover a {
+        background-color: rgb(151,201,221);
+        color: white;
+    }
+
+    #dailystatusview li a {
+        text-decoration: none;
+        color: white;
+        text-shadow: 1px 0px 3px rgb(157, 157, 157);
+    }
+
+    #dailystatusview li:nth-child(1) {
+        border-radius: 4px 0px 0px 4px;
+        margin-left: 1px;
+    }
+
+    #dailystatusview li:nth-child(3) {
+        border-radius: 0px 4px 4px 0px;
+    }
+
+#dailystatusview .active {
+    background-color: #0066A6;
+}
+
+.dailystatusblock {
+    padding-top: 30px;
+}
+
+.tabstyle {
+    border: solid;
+    background-color: rgba(226, 229, 224, 0.5);
+    border-width: 1px;
+}
+
+#searchdiv {
+    float: right;
+    margin-right: 12px;
+}
+/**********************************Daily Status style End*****************************/
 /***************************** Table Style *******************************/
 .Table {
     display: table;
@@ -222,6 +292,10 @@ a, a:visited, a.hover, a:active {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
 }
 
+    .Heading .Cell p {
+        color: white;
+    }
+
 .Row {
     display: table-row;
 }
@@ -236,12 +310,6 @@ a, a:visited, a.hover, a:active {
     border-color: gainsboro;
     border-collapse: collapse;
 }
-
-.Heading .Cell p {
-    color: white;
-}
-/**********************************Daily Status style End*****************************/
-
 
 /***************************************Login page************************************/
 #login {
@@ -303,30 +371,9 @@ a, a:visited, a.hover, a:active {
 
 
 /*********************************Login page End*******************************************/
-table.gridtable {
-    width: 990px;
-    color: #333333;
-    border-width: 1px;
-    border-color: #AAA;
-    border-collapse: collapse;
-}
 
-    table.gridtable th {
-        border-width: 1px;
-        padding: 8px;
-        border-style: solid;
-        border-color: #AAA;
-        background-color: #81A2C4;
-        color: white;
-    }
 
-    table.gridtable td {
-        border-width: 1px;
-        padding: 8px;
-        border-style: solid;
-        border-color: #AAA;
-        background-color: #ffffff;
-    }
+/*********************************Vacation page *******************************************/
 
 .vacation_Outterdiv {
     margin: 20px 20px 20px 20px;
@@ -339,7 +386,7 @@ table.gridtable {
 }
 
 .vacation_table {
-    width: 960px;
+    width: 915px;
     border: 1px solid #AAA;
     background-color: #EFF4F9;
     padding: 20px 20px 20px 20px;
@@ -402,7 +449,37 @@ table.gridtable {
     display: inline-block;
     font-size: 14px;
     border-radius: 8px;
+    outline: none;
 }
+
+
+.val_msg {
+    color: red;
+}
+
+.vacation_yearSelect {
+    float: right;
+    padding-bottom: 20px;
+}
+
+#vacation_list {
+    margin-top: 20px;
+    margin-bottom: 17px;
+}
+
+.noRecords{
+    display: table;
+    width: 100%;
+    border-width: 2px;
+    background-color: #EFF4F9;
+    border: groove;
+    border-collapse: collapse;
+    height:50px; 
+}
+
+.noRecords p{text-align:center;}
+/*********************************Vacation page End*******************************************/
+
 
 /* Search panel style starts*/
 .form-wrapper {
@@ -457,7 +534,7 @@ table.gridtable {
 
 #welcome_message {
     margin: 170px;
-    margin-left: 300px;
+    margin-left: 255px;
     font-size: -webkit-xxx-large;
     color: cornflowerblue;
 }
