Changes in customer controller

--- a/views/Customer.html
+++ b/views/Customer.html
@@ -31,7 +31,7 @@
             <p>{{customer.Address}}</p>
         </div>
         <div class="Cell">
-            <p>{{customer.Country}}</p>
+            <p>{{customer.CountryName}}</p>
         </div>
         <div class="Cell">
             <p>{{customer.AccountManager}}</p>
