--- a/shared/styles/style.css
+++ b/shared/styles/style.css
@@ -269,8 +269,7 @@ a, a:visited, a.hover, a:active {
     margin-right: 12px;
 }
 
-
-#dailystatusview{
+#dailystatusview {
     margin-left: -30px;
 }
 
@@ -314,6 +313,7 @@ a, a:visited, a.hover, a:active {
     padding-right: 5px;
     width: auto;
     border-color: gainsboro;
+    /*border-collapse: collapse;*/
 }
 
 
